Hide tab icon when navigating to chrome://newtab

This change prevents refreshing "chrome://newtab" from flickering due to
the loading animation playing during refresh while it's navigating.

Bug: chromium:902228
Change-Id: Ifc734b67313ae2ce060e81fba9ce48e638c99190
Reviewed-on: https://chromium-review.googlesource.com/c/1373133
Commit-Queue: Peter Boström <pbos@chromium.org>
Reviewed-by: Marc Treib <treib@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617718}
Former-commit-id: d9a4e7095e587d2e9fcb2117a0e496ee51064222